# ModernizeIQ

./: .gitignore  Eval_scenrios.xlsx  Project_plan.md  README (1).md  alembic.ini  docker-compose.yml  ideas.md  main.py  makefile  pyproject.toml  readme.md  requirements.txt
agents/: context.py  llm.py
alembic/: env.py
alembic/versions/: 679ccd8cc0c2_initial_schema_with_seven_tables.py
api/: models.py  schemas.py
data/: seed.sql
db/: __init__.py  models.py  session.py
docs/: data_design.md  dataset_qa.md  learning-log.md  week-3_plan.md  week-4_plan.md  week-5_plan.md
docs/retrospectives/: phase-0-retrospective.md
eval/: baseline.py  harness.py  loader.py  schema.py
eval/scenarios/: ambiguous_monolith-08.yaml  ambiguous_monolith-09.yaml  ambiguous_monolith-10.yaml  ambiguous_refactor_replace-08.yaml  ambiguous_refactor_replace-09.yaml  ambiguous_refactor_replace-10.yaml  clear_rehost-01.yaml  clear_rehost-02.yaml  clear_rehost-03.yaml  clear_replace-06.yaml  clear_replace-07.yaml  clear_retire-04.yaml  clear_retire-05.yaml  compliance_deferred-17.yaml  compliance_deferred-18.yaml  dependency_blocked-11.yaml  dependency_blocked-12.yaml  file-11.yaml  file-12.yaml  file-13.yaml  file-14.yaml  file-15.yaml  file-16.yaml  file-17.yaml  file-18.yaml  file-19.yaml  file-20.yaml  replatform-13.yaml  replatform-14.yaml  retain-15.yaml  retain-16.yaml  wildcard-19.yaml  wildcard-20.yaml
scripts/: check_schema.py  generate.py  inspect_graph.py  run_eval.py  seed.py
tests/: test_db_smoke.py
