[project]
name = "modernizeiq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.103.1",
    "faker>=40.19.1",
    "fastapi>=0.136.1",
    "matplotlib>=3.10.9",
    "networkx>=3.6.1",
    "openai>=2.41.0",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0",
    "uvicorn>=0.47.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
